--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
 
     <section class="w-screen overflow-y-hidden overflow-x-hidden lg:max-w-screen-xl px-3 md:max-w-screen-lg mx-auto z-10 items-center py-8 xl:py-16 relative">
-        <img src="img/screen.png" alt="" class="absolute top-14 md:w-[500px] xl:w-[700px] xl:-right-0 -right-4 -z-10 w-[300px]">
+        <img src="img/content-2.png" alt="" class="absolute top-14 md:w-[500px] xl:w-[700px] xl:-right-0 -right-4 -z-10 w-[300px]">
         <p class="font-Poppins font-medium text-white md:text-3xl text-center md:text-left pb-56 lg:pb-20">Create & Share</p>
         <h2 class="text-3xl md:text-7xl text-center md:text-left text-white font-bold py-2">Reach Your<br>Audience<span class="text-blue-500">Directly.</span></h2>
         <ul class="list-none py-4">
@@ -190,7 +190,7 @@
         </div>
     </section>
 
-    <footer class="max-w-screen-md lg:max-w-screen-xl px-3 md:max-w-screen-lg mx-auto flex justify-between z-10 overflow-visible items-center py-6">
+    <footer class="container max-w-sm md:max-w-lg lg:max-w-screen-lg mx-auto flex justify-center items-center md:justify-between py-6 md:py-8">
         <div class="text-white/40 flex flex-col justify-center items-center">
             <div class="flex items-center">
                 <img src="img/logo.svg" alt="Marico" class="scale-75 -z-10">
