--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
     
-    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu" x-show="isOpen">
+    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 h-full w-full duration-300 ease-in-out transition-all bg-[#343434] -right-full" id="menu" x-show="isOpen">
         <ul class="flex flex-col justify-center items-center text-white font-Poppins font-bold text-4xl">
           <li class="py-8 text-blue-600">Main</li>
           <li class="py-8"><a href="about-us.html">About</a></li>
