--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
     
-    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 h-full w-full duration-300 ease-in-out transition-all bg-[#343434] -right-full" id="menu" x-show="isOpen">
+    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 h-full w-full duration-300 ease-in-out transition-all bg-[#343434] -right-full" id="menu">
         <ul class="flex flex-col justify-center items-center text-white font-Poppins font-bold text-4xl">
           <li class="py-8 text-blue-600">Main</li>
           <li class="py-8"><a href="about-us.html">About</a></li>
@@ -70,7 +70,7 @@
     </main>
 
     <section class="container justify-center items-center lg:flex lg:flex-col max-w-[300px] md:max-w-screen-sm lg:max-w-screen-xl mx-auto py-8 xl:py-16">
-        <p class="text-white font-semibold text-4xl text-center">Why Creators Love Marico</p>
+        <h3 class="text-white font-semibold text-4xl text-center">Why Creators Love Marico</h3>
         <div class="items-baseline justify-center container lg:flex lg:justify-evenly">
             <div class="py-3 justify-center items-center flex flex-col">
                 <div class="flex pt-4 items-center justify-center">
@@ -97,7 +97,7 @@
     </section>
 
     <section class="container max-w-[300px] mx-auto md:max-w-screen-md lg:max-w-screen-lg justify-center items-center flex flex-col py-8 xl:py-16">
-        <p class="text-blue-600 text-sm text-center xl:text-lg">STEP 1</p>
+        <h3 class="text-blue-600 text-sm text-center xl:text-lg">STEP 1</h3>
         <p class="text-white text-2xl lg:text-5xl font-semibold text-center pt-3">Connect Your Content</p>
         <p class="text-white/50 mx-auto text-lg xl:text-2xl font-light text-center leading-8 lg:max-w-xl pt-3">Bring all of your content together and get a Homepage that
             automatically updates whenever you create anywhere online.</p>
@@ -117,15 +117,15 @@
                 <p class="w-8 h-8 rounded-full bg-white/20 flex justify-center items-center text-lg mr-1">2</p>
                 <p class="text-base text-center md:text-left md:text-xl py-2">Your page automatically updates whenever you create.</p>
             </li>
-            <div class="flex flex-col md:flex-row items-center pt-10">
+        </ul>
+        <div class="flex flex-col md:flex-row items-center pt-10">
                 <a href="singup.html" class="w-44 md:w-52 lg:w-40 py-3 my-2 mx-2 text-center text-white text-base box-border bg-blue-600 rounded-xl transition-all hover:bg-blue-500">Get Started Now</a>
                 <a href="singup.html" class="w-44 md:w-52 lg:w-40 py-3 my-2 mx-2 text-center text-white/50 text-base box-border bg-transparent rounded-xl border-white/50 border-2 hover:bg-white/25 transition-all">View A Demo</a>
             </div>
-        </ul>
     </section>
 
     <section class="container max-w-[300px] mx-auto md:max-w-screen-md lg:max-w-screen-lg justify-center items-center flex flex-col py-8 xl:py-16">
-        <p class="text-blue-600 text-sm text-md text-center xl:text-lg">STEP 2</p>
+        <h3 class="text-blue-600 text-sm text-md text-center xl:text-lg">STEP 2</h3>
         <p class="text-white text-2xl lg:text-5xl font-semibold text-center pt-3">Share Your Homepage</p>
         <p class="text-white/50 mx-auto text-lg xl:text-3xl font-light text-center leading-8 lg:max-w-xl pt-3">Share your Wavium homepage link with your followers, and
             we'll handle the rest.</p>
@@ -134,7 +134,7 @@
     <section class="flex flex-col justify-center items-center">
         <div class="flex flex-wrap justify-center items-center pb-6">
             <div class="bg-[#1f1f1f] w-72 h-[283px] lg:h-[460px] mx-2 my-2 relative pt-3 pl-3 lg:pt-6 lg:pl-6 lg:w-[600px]">
-                <p class="font-Poppins text-green-500 text-xl lg:text-3xl">One Link</p>
+                <h3 class="font-Poppins text-green-500 text-xl lg:text-3xl">One Link</h3>
                 <p class="text-gray-500 text-3xl lg:text-6xl font-semibold font-Poppins py-3 pb-10">ALL You Create.<br><span class="text-white font-Poppins">One Link</span></p>
                 <img src="img/mobile.svg" alt="" class="w-full lg:w-11/12 ml-auto">
             </div>
@@ -147,7 +147,7 @@
     </section>
 
     <section class="container max-w-[300px] mx-auto md:max-w-screen-md lg:max-w-screen-lg justify-center items-center flex flex-col py-8 xl:py-16">
-        <p class="text-blue-600 text-sm text-md text-center xl:text-lg">STEP 3</p>
+        <h3 class="text-blue-600 text-sm text-md text-center xl:text-lg">STEP 3</h3>
         <p class="text-white text-2xl lg:text-5xl font-semibold text-center pt-3">Send Emails & Text Messages</p>
         <p class="text-white/50 mx-auto text-lg xl:text-3xl font-light text-center leading-8 lg:max-w-xl pt-3">No more going through a social platform. Reach and engage
             your audience directly over email and text massage.</p>
@@ -155,7 +155,7 @@
 
     <section class="w-screen overflow-y-hidden overflow-x-hidden lg:max-w-screen-xl px-3 md:max-w-screen-lg mx-auto z-10 items-center py-8 xl:py-16 relative">
         <img src="img/content-2.png" alt="" class="absolute top-14 md:w-[500px] xl:w-[700px] xl:-right-0 -right-4 -z-10 w-[300px]">
-        <p class="font-Poppins font-medium text-white md:text-3xl text-center md:text-left pb-56 lg:pb-20">Create & Share</p>
+        <h3 class="font-Poppins font-medium text-white md:text-3xl text-center md:text-left pb-56 lg:pb-20">Create & Share</h3>
         <h2 class="text-3xl md:text-7xl text-center md:text-left text-white font-bold py-2">Reach Your<br>Audience<span class="text-blue-500">Directly.</span></h2>
         <ul class="list-none py-4">
             <li class="font-Poppins text-white flex items-center py-1 flex-col justify-center md:justify-start md:flex-row">
@@ -166,22 +166,23 @@
                 <p class="w-8 h-8 rounded-full bg-white/20 flex justify-center items-center text-lg mr-1">2</p>
                 <p class="text-base text-center md:text-left md:text-xl py-2">Share content over email, text message or your homepage.</p>
             </li>
-            <div class="flex flex-col md:flex-row items-center pt-10">
+            
+        </ul>
+        <div class="flex flex-col md:flex-row items-center pt-10">
                 <a href="singup.html" class="w-44 md:w-52 lg:w-40 py-3 my-2 mx-2 text-center text-white text-base box-border bg-blue-600 rounded-xl transition-all hover:bg-blue-500">Get Started Now</a>
                 <a href="singup.html" class="w-44 md:w-52 lg:w-40 py-3 my-2 mx-2 text-center text-white/50 text-base box-border bg-transparent rounded-xl border-white/50 border-2 hover:bg-white/25 transition-all">View A Demo</a>
             </div>
-        </ul>
     </section>
 
     <section class="relative flex justify-center items-center my-12 overflow-y-hidden">
         <img src="img/bg-people.png" alt="" class="w-full z-0">
-        <p class="text-white absolute inset-y-auto inset-x-auto font-bold text-2xl text-center font-Poppins md:text-3xl lg:text-4xl lg:w-3/4 z-10 w-4/5">We've helped over 1,000 creators to
-            claim control of their audience.</p>
+        <h3 class="text-white absolute inset-y-auto inset-x-auto font-bold text-2xl text-center font-Poppins md:text-3xl lg:text-4xl lg:w-3/4 z-10 w-4/5">We've helped over 1,000 creators to
+            claim control of their audience.</h3>
     </section>
 
     <section class="flex flex-col justify-center items-center py-12">
         <img src="img/logo.svg" alt="" class="p-3 scale-110 md:scale-150 lg:scale-[2] lg:p-7">
-        <p class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</p>
+        <h3 class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</h3>
         <p class="text-white text-center text-xl lg:text-2xl">Setup is easy and takes under 5 minutes.</p>
         <a href="pricing.html" class="text-white py-3 px-10 bg-blue-600 hover:bg-blue-500 transition-all duration-100 rounded-xl text-center my-4">Get Started Now</a>
         <div class="flex items-center">
