--- a/about-us.html
+++ b/about-us.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
     
-    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu" x-show="isOpen">
+    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu">
         <ul class="flex flex-col justify-center items-center text-white font-Poppins font-bold text-4xl">
           <li class="py-8"><a href="index.html">Main</a></li>
           <li class="py-8 text-blue-600">About</li>
@@ -65,11 +65,11 @@
     </header>
 
     <section class="container max-w-[85vw] md:max-w-lg lg:max-w-2xl mx-auto py-4 border-b-2 border-white/30">
-        <p class="text-white font-light leading-6 text-md py-3 text-justify">Building a career on social platforms is like building a home on someone else's
+        <h3 class="text-white font-light leading-6 text-md py-3 text-justify">Building a career on social platforms is like building a home on someone else's
             land. While social platforms are great for discovering and reaching your audience,
             your goal as a creator should be to convert your followers into email or text
             message subscribers. Why? Look no further than TikTok. Almost overnight,
-            millions of creative people almost lost their careers. </p>
+            millions of creative people almost lost their careers. </h3>
         <p class="text-white font-light leading-6 text-md py-3 text-justify">If a platform removes your account, or their algorithm for distribution no longer
             favours you, are you prepared? </p>
         <p class="text-white font-light leading-6 text-md py-3 text-justify">If you want to build a career as a creator, your focus should be on building durable
@@ -133,7 +133,7 @@
 
     <section class="flex flex-col justify-center items-center py-12">
         <img src="img/logo.svg" alt="" class="p-3 scale-110 md:scale-150 lg:scale-[2] lg:p-7">
-        <p class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</p>
+        <h3 class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</h3>
         <p class="text-white text-center text-xl lg:text-2xl">Setup is easy and takes under 5 minutes.</p>
         <a href="pricing.html" class="text-white py-3 px-10 bg-blue-600 hover:bg-blue-500 transition-all duration-100 rounded-xl text-center my-4">Get Started Now</a>
         <div class="flex items-center">
@@ -151,7 +151,7 @@
             <a href="mailto:">info@marico.co</a>
         </div>
         <div class="text-white/40 hidden md:flex">
-            <a href="About.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
+            <a href="about-us.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
             <a href="pricing.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Pricing</a>
             <a href="blog.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Blog</a>
             <a href="login.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Sign in</a>
