--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <a href="mailto:">info@marico.co</a>
         </div>
         <div class="text-white/40 hidden md:flex">
-            <a href="About.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
+            <a href="about-us.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
             <a href="pricing.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Pricing</a>
             <a href="blog.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Blog</a>
             <a href="login.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Sign in</a>
