--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
     
-    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu" x-show="isOpen">
+    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu">
         <ul class="flex flex-col justify-center items-center text-white font-Poppins font-bold text-4xl">
           <li class="py-8"><a href="index.html">Main</a></li>
           <li class="py-8"><a href="about-us.html">About</a></li>
@@ -61,8 +61,8 @@
         <div class="border-2 border-white/50 w-72 p-4 m-2 rounded-xl hover:bg-white/10 hover:scale-105 transition-all duration-100 ease-linear">
             <img src="img/Twitter_logo.svg" alt="">
             <a href="https://twitter.com" class="font-semibold underline decoration-blue-500 underline-offset-2 decoration-2 leading-loose text-white text-xl">Twitter</a>
-            <p class="text-white/50">Connect your Twitter feed to
-                your Marico homepage.</p>
+            <h3 class="text-white/50">Connect your Twitter feed to
+                your Marico homepage.</>
         </div>
         <div class="border-2 border-white/50 w-72 p-4 m-2 rounded-xl hover:bg-white/10 hover:scale-105 transition-all duration-100 ease-linear">
             <img src="img/YouTube_logo.svg" alt="">
@@ -138,13 +138,13 @@
 
     <section class="relative flex justify-center items-center my-12 overflow-y-hidden">
         <img src="img/bg-people.png" alt="" class="w-full z-0">
-        <p class="text-white absolute inset-y-auto inset-x-auto font-bold text-2xl text-center font-Poppins md:text-3xl lg:text-5xl lg:w-3/4 z-10 w-4/5">We've helped over 1,000 creators to
-            claim control of their audience.</p>
+        <h3 class="text-white absolute inset-y-auto inset-x-auto font-bold text-2xl text-center font-Poppins md:text-3xl lg:text-5xl lg:w-3/4 z-10 w-4/5">We've helped over 1,000 creators to
+            claim control of their audience.</>
     </section>
 
     <section class="flex flex-col justify-center items-center py-12">
         <img src="img/logo.svg" alt="" class="p-3 scale-110 md:scale-150 lg:scale-[2] lg:p-7">
-        <p class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</p>
+        <h3 class="font-Poppins font-bold text-2xl text-white md:text-3xl lg:text-5xl md:py-4">Get Started Now</h3>
         <p class="text-white text-center text-xl lg:text-2xl">Setup is easy and takes under 5 minutes.</p>
         <a href="pricing.html" class="text-white py-3 px-10 bg-blue-600 hover:bg-blue-500 transition-all duration-100 rounded-xl text-center my-4">Get Started Now</a>
         <div class="flex items-center">
@@ -162,7 +162,7 @@
             <a href="mailto:">info@marico.co</a>
         </div>
         <div class="text-white/40 hidden md:flex">
-            <a href="About.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
+            <a href="about-us.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">About</a>
             <a href="pricing.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Pricing</a>
             <a href="blog.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Blog</a>
             <a href="login.html" class="text-white/50 font-medium px-4 transition-all hover:text-blue-600">Sign in</a>
