--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
             <img src="img/Twitter_logo.svg" alt="">
             <a href="https://twitter.com" class="font-semibold underline decoration-blue-500 underline-offset-2 decoration-2 leading-loose text-white text-xl">Twitter</a>
             <h3 class="text-white/50">Connect your Twitter feed to
-                your Marico homepage.</>
+                your Marico homepage.</h3>
         </div>
         <div class="border-2 border-white/50 w-72 p-4 m-2 rounded-xl hover:bg-white/10 hover:scale-105 transition-all duration-100 ease-linear">
             <img src="img/YouTube_logo.svg" alt="">
@@ -139,7 +139,7 @@
     <section class="relative flex justify-center items-center my-12 overflow-y-hidden">
         <img src="img/bg-people.png" alt="" class="w-full z-0">
         <h3 class="text-white absolute inset-y-auto inset-x-auto font-bold text-2xl text-center font-Poppins md:text-3xl lg:text-5xl lg:w-3/4 z-10 w-4/5">We've helped over 1,000 creators to
-            claim control of their audience.</>
+            claim control of their audience.</h3>
     </section>
 
     <section class="flex flex-col justify-center items-center py-12">
