--- a/pricing.html
+++ b/pricing.html
@@ -39,7 +39,7 @@
         </button>
     </nav>
 
-    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu" x-show="isOpen">
+    <nav class="md:hidden inset-o overflow-y-hidden flex flex-col justify-center items-center fixed top-0 z-10 -right-full h-full w-full duration-300 ease-in-out transition-all bg-[#343434]" id="menu">
         <ul class="flex flex-col justify-center items-center text-white font-Poppins font-bold text-4xl">
           <li class="py-8"><a href="index.html">Main</a></li>
           <li class="py-8"><a href="about-us.html">About</a></li>
